--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,8 @@ spring.application.name=AlmoxarifadoMecanica
 spring.datasource.url=jdbc:postgresql://localhost:5432/almoxarifado_mecanica
 spring.datasource.username=am_admin
 spring.datasource.password=amadminsenai361
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.default_schema=schema_almoxarifado
-
-server.address=0.0.0.0
-server.port=8080
-
-
-
-
 
 
